related to #1704 Better 'visible' attribute implementation in API * fixed SQL error * Use correct function to save 'visible' attribute * Underlined the 'Unlock it' button on the orange alert

--- a/admin/themes/default/theme.css
+++ b/admin/themes/default/theme.css
@@ -406,6 +406,7 @@ LI.menuLi {
 /* Cat Modify */
 .unlock-album {
   cursor: pointer;
+  text-decoration: underline;
 }
 
 .cat-modify {
